@@ -6,7 +6,7 @@ autotrace-config.af autotrace.dsp autotrace.dsw			\
 autotrace.m4 shape_cubic.c.diff README.MING			\
 libming.dsw libming.dsp						\
 autotrace.sln autotrace.vcproj libming.sln libming.vcproj	\
-autotrace.pc.in
+autotrace.pc.in autotrace.spec.in
 
 AUTOMAKE_OPTIONS = foreign no-dependencies
 
@@ -133,3 +133,5 @@ autotrace-config: autotrace-config.in
 autotrace-config.in: autotrace-config.af
 	autofig $<
 
+dist-hook: autotrace.spec
+	cp autotrace.spec $(distdir)
