@@ -1,3 +1,12 @@
+2002-03-08  Masatake YAMATO  <yamato@redhat.com>
+
+	* autotrace.spec.in: copyed from
+	http://www.cs.uu.nl/~hanwen/public/software/autotrace.spec.
+
+	* configure.in: Added autotrace.spec supports.
+
+	* Masatake.am: Likewise.
+
 2002-03-08  Martin Weber <martweb@gmx.net>
 
 	* output-pdf.c: pdf files now contain a xref table.
